feat(portal): route subscription form reads/writes through nav-item storage
Repoints SubscriptionFormQueryServiceImpl and SubscriptionFormCrudServiceImpl
to read/write the environment-default subscription form through the
PortalNavigationItem/PortalPageContent model instead of the retired
subscription_forms table/collection, swapping the implementation behind
these two stable interfaces rather than editing every caller.

Every consumer keeps working unchanged: the Get/Update/Enable/Disable/
CreateDefault use cases, the still-live management-v2 REST resources, and
SubscriptionValidationServiceImpl's live subscription-submission-time
validation path (found during research; not named by the spec, but required
for true zero-behavior-change since it reads the same query service).

The legacy subscription_forms table is left in place and is still read
directly by SubscriptionFormConstraintsUpgrader and the migration upgrader
for one-time backfill purposes; dropping it is a later, separate change.